--- a/assests/css/details.css
+++ b/assests/css/details.css
@@ -12,12 +12,22 @@ body {
     width: 100%;
 }
 
+.head_fav{
+    background-image: linear-gradient(180deg, black, #00000038);
+    font-family: 'Rubik 80s Fade';
+    font-size: 17pt;
+    border-radius: 25px;
+    padding: 0px 15px;
+    box-shadow: 0px 0px 8px 0px black;
+}
+
 #logo_container {
     padding: 4px;
     width: 100px;
 }
 
 #logo {
+    padding: 0px 4px;
     width: 90%;
     object-fit: fill;
 }
