--- a/assests/css/favourites.css
+++ b/assests/css/favourites.css
@@ -1,6 +1,6 @@
-body {
-    color: white;
+body{
     background-color: black;
+    color: white;
 }
 
 a {
@@ -12,65 +12,28 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: #fffffff0;
+    align-content: center;
+    width: 100%;
+}
+
+.head_fav{
+    background-image: linear-gradient(180deg, black, #00000038);
+    font-family: 'Rubik 80s Fade';
+    font-size: 17pt;
+    border-radius: 25px;
+    padding: 0px 15px;
+    box-shadow: 0px 0px 8px 0px black;
 }
 
 #logo_container {
-    width: 10%;
-    min-width: 80px;
+    padding: 4px;
+    width: 100px;
 }
 
 #logo {
-    width: 60%;
-    object-fit: fill;
-}
-
-#search_text {
-    outline: none;
-    width: 70%;
-    border-radius: 5px;
-    font-family: 'Rubik Vinyl', cursive;
-    background-color: #deb88700;
-    font-size: 18pt;
-    /* background-image: linear-gradient(45deg, #ff0000, #ff000000); */
-    color: white;
-    border: 0;
-    border-bottom: 1px solid gray;
-    padding: 5px;
-}
-
-#tosearch {
-    background-color: transparent;
-    color: red;
-    font-size: 18pt;
-    font-family: cursive;
-    border-radius: 25px;
-    border: 1px solid gray;
-}
-
-#tosearch:hover {
-    cursor: pointer;
-}
-
-#micro_fav_btn {
-    display: inline-flex;
-    background-color: transparent;
-    color: red;
-    font-size: 16pt;
-    font-family: cursive;
-    border-radius: 25px;
-    width: 100px;
-    border: 1px solid gray;
-    align-items: center;
-}
-
-#micro_icon {
-    width: 40%;
-    padding: 5px;
-}
-
-#micro_icon img {
-    width: 100%;
-    height: 62%;
+    padding: 0px 4px;
+    width: 90%;
     object-fit: fill;
 }
 
@@ -95,14 +58,10 @@ a {
     height: 320px;
     background-color: rgb(32 0 0);
     border-radius: 20px;
-    /* background-color: rgb(68 69 56); */
-    /* background-image: linear-gradient(45deg, #704747, transparent); */
     background-image: linear-gradient(180deg, transparent, #ab1b1b91, #d40303, transparent);
     margin: 4px;
     margin: 10px;
     padding: 10px;
-    /* border: 1px solid red; */
-    /* border: 0; */
     border-bottom: 1px solid red;
 }
 
@@ -112,7 +71,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .character_thumb {
